--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
 /* Book section */
 @import url("https://fonts.googleapis.com/css?family=Cormorant+Garamond:300,400,600|Tulpen+One&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Special+Elite&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inknut+Antiqua:wght@300&display=swap");
 :root {
   /* colors */
   --body-bg: #ffffff;
@@ -63,28 +65,42 @@ body {
   color: white;
   font-family: "Lato", sans-serif;
   width: 100%;
+  padding: 2em;
 }
 
 .authorTitle {
   font-size: 2em;
-  text-align: center;
+  text-align: left;
   margin: 1.2em;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: #0b0218;
+  border-top: 1px solid #0b0218;
+  padding-top: 2em;
+}
+
+.arrow {
+  width: 5em;
+  -webkit-transition: -webkit-transform 0.2s ease-in-out;
+  transition: -webkit-transform 0.2s ease-in-out;
+  transition: transform 0.2s ease-in-out;
+  transition: transform 0.2s ease-in-out, -webkit-transform 0.2s ease-in-out;
+}
+
+.arrow:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+  cursor: pointer;
 }
 
 .authorPortrait {
   display: block;
   width: 20em;
+  border-radius: 50%;
   height: auto;
   margin-left: auto;
   margin-right: auto;
   -webkit-box-shadow: 2px 2px 10px black;
           box-shadow: 2px 2px 10px black;
-}
-
-.authorBottom {
-  font-size: 2em;
-  text-align: center;
-  margin: 1.2em;
 }
 
 .authorSection {
@@ -103,16 +119,28 @@ body {
 }
 
 .authorDescription {
-  width: 33%;
-  padding: 1.2em;
+  width: 40em;
+  padding: 1.5em;
   line-height: 2em;
+  font-size: 1em;
+  font-family: "Inknut Antiqua", serif;
+}
+
+.reviewSection {
+  width: 100%;
+  background-image: url("src/wall.jpg");
+  background-size: cover;
+  overflow: hidden;
+  text-align: center;
 }
 
 .review {
   font-size: 2.5em;
   padding: 2em;
   text-align: center;
-  font-family: "Lato", sans-serif;
+  font-family: "Special Elite", cursive;
+  color: white;
+  mix-blend-mode: difference;
 }
 
 #review {
