--- a/style.scss
+++ b/style.scss
@@ -4,6 +4,8 @@
 
 @import url("https://fonts.googleapis.com/css?family=Cormorant+Garamond:300,400,600|Tulpen+One&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Special+Elite&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inknut+Antiqua:wght@300&display=swap");
 
 :root {
   /* colors */
@@ -60,27 +62,38 @@ body {
   color: white;
   font-family: "Lato", sans-serif;
   width: 100%;
+  padding: 2em;
 }
 
 .authorTitle {
   font-size: 2em;
-  text-align: center;
+  text-align: left;
   margin: 1.2em;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color:rgb(11, 2, 24);
+  border-top: 1px solid rgb(11, 2, 24);
+  padding-top: 2em;
+}
+
+.arrow {
+  width: 5em;
+  transition: transform 0.2s ease-in-out;
+}
+
+.arrow:hover {
+  transform: scale(1.2);
+  cursor: pointer;
 }
 
 .authorPortrait {
   display: block;
   width: 20em;
+  border-radius: 50%;
   height: auto;
   margin-left: auto;
   margin-right: auto;
   box-shadow: 2px 2px 10px black;
-}
-
-.authorBottom {
-  font-size: 2em;
-  text-align: center;
-  margin: 1.2em;
 }
 
 .authorSection {
@@ -91,18 +104,29 @@ body {
 }
 
 .authorDescription {
-  width: 33%;
-  padding: 1.2em;
+  width: 40em;
+  padding: 1.5em;
   line-height: 2em;
+  font-size: 1em;
+  font-family: "Inknut Antiqua", serif;
 }
 
 // Review Section
+.reviewSection {
+  width: 100%;
+  background-image: url("src/wall.jpg");
+  background-size: cover;
+  overflow: hidden;
+  text-align: center;
+}
 
 .review {
   font-size: 2.5em;
   padding: 2em;
   text-align: center;
-  font-family: "Lato", sans-serif;
+  font-family: "Special Elite", cursive;
+  color: white;
+  mix-blend-mode: difference;
 }
 
 #review {
