--- a/style.scss
+++ b/style.scss
@@ -35,6 +35,7 @@ body {
   align-items: center;
   justify-content: center;
   margin: 0;
+  overflow-x: hidden;
 }
 // MaintTitle
 
@@ -48,7 +49,7 @@ body {
 }
 
 .amazonLogo {
-  width: 15em;
+  width: 18em;
 }
 
 .amazonLink a {
@@ -71,7 +72,7 @@ body {
   margin: 1.2em;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  color:rgb(11, 2, 24);
+  color: rgb(11, 2, 24);
   border-top: 3px solid rgb(11, 2, 24);
   padding-top: 1em;
 }
@@ -135,6 +136,71 @@ body {
 
 #author {
   font-size: 0.8em;
+}
+
+// Footer Section
+.footerContainer {
+  width: 100%;
+  background-color: whitesmoke;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  color: rgb(11, 2, 24);
+  font-family: "Lato", sans-serif;
+  padding: 4em;
+}
+
+.socialMediaContainer {
+  display: flex;
+  flex-direction: column;
+  border-right: 1px solid rgb(11, 2, 24);
+  justify-content: space-around;
+  padding: 2em;
+}
+
+.socialIcon {
+  width: 4em;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
+.retailerContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 100%;
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+.fnacLogo {
+  width: 6em;
+}
+
+.amazonSVG {
+  width: 6em;
+}
+.footerRight {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 100%;
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+.footerRight a {
+  text-decoration: none;
+  color: rgb(11, 2, 24);
+}
+
+.copyrightBar {
+  background-color: rgb(11, 2, 24);
+  width: 100%;
+  color: whitesmoke;
+  text-align: center;
+  font-family: "Lato", sans-serif;
 }
 // Book Section
 
