--- a/style.scss
+++ b/style.scss
@@ -148,7 +148,7 @@ body {
   justify-content: space-between;
   color: rgb(11, 2, 24);
   font-family: "Lato", sans-serif;
-  padding: 4em;
+  padding: 2em;
 }
 
 .socialMediaContainer {
@@ -168,10 +168,8 @@ body {
 .retailerContainer {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-evenly;
   height: 100%;
-  font-size: 1.5em;
-  font-weight: bold;
 }
 
 .fnacLogo {
