--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Inknut+Antiqua:wght@300&display=swap");
 :root {
   /* colors */
-  --body-bg: #ffffff;
+  --body-bg: whitesmoke;
   --page-bg: #f5f5f5;
   --dark-text: #2a2935;
   /* spacing */
@@ -20,25 +20,15 @@
 }
 
 * {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
   background-color: var(--body-bg);
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   margin: 0;
   overflow-x: hidden;
 }
@@ -53,7 +43,17 @@ body {
 }
 
 .amazonLogo {
-  width: 18em;
+  display: block;
+  width: 10em;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.amazonText {
+  text-align: center;
+  color: #3E8886;
+  font-family: "Lato", sans-serif;
+  font-size: 2em;
 }
 
 .amazonLink a {
@@ -61,70 +61,84 @@ body {
   color: black;
 }
 
+.youtubeVideo {
+  margin-top: 2em;
+  margin-bottom: 2em;
+}
+
 .authorContainer {
-  background: #0b0218;
-  color: white;
+  background: #3e8886;
+  background: linear-gradient(180deg, #3e8886 0%, #460979 70%, #1c0736 100%);
+  color: whitesmoke;
   font-family: "Lato", sans-serif;
-  width: 100%;
+  width: 80%;
   padding: 2em;
+  text-align: center;
+  box-shadow: 1px 1px 40px #aaa3a3;
+  border-radius: 5px;
 }
 
 .authorTitle {
   font-size: 2em;
   text-align: left;
   margin: 1.2em;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  color: #0b0218;
-  border-top: 3px solid #0b0218;
-  padding-top: 1em;
-}
-
-.arrow {
-  width: 5em;
-  -webkit-transition: -webkit-transform 0.2s ease-in-out;
-  transition: -webkit-transform 0.2s ease-in-out;
-  transition: transform 0.2s ease-in-out;
-  transition: transform 0.2s ease-in-out, -webkit-transform 0.2s ease-in-out;
-}
-
-.arrow:hover {
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
-  cursor: pointer;
-}
-
-.authorPortrait {
-  display: block;
-  width: 20em;
-  border-radius: 50%;
-  height: auto;
-  margin-left: auto;
-  margin-right: auto;
-  -webkit-box-shadow: 2px 2px 10px black;
-          box-shadow: 2px 2px 10px black;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: #3E8886;
 }
 
 .authorSection {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  font-family: "Inknut Antiqua", serif;
+  font-size: 1em;
+  padding-left: 4em;
+  padding-right: 4em;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  text-shadow: 1px 1px 1px #423f3f;
 }
 
-.authorDescription {
-  width: 40em;
-  padding: 1.5em;
-  line-height: 2em;
-  font-size: 1em;
+.authorSection p {
+  margin-top: 0.2em;
+  margin-bottom: 0.2em;
+}
+
+.bookContainer {
+  background: #15052b;
+  color: whitesmoke;
+  font-family: "Lato", sans-serif;
+  width: 100%;
+  padding: 2em;
+  text-align: left;
+  box-shadow: 1px 1px 40px #aaa3a3;
+  margin-top: 4em;
+}
+
+.bookSection {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
   font-family: "Inknut Antiqua", serif;
+  font-size: 1em;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  text-shadow: 1px 1px 1px #423f3f;
+}
+
+.bookDescription {
+  width: 50%;
+  margin-top: 5em;
+}
+
+.portrait {
+  width: 30em;
+  border-radius: 5px;
+  margin-top: 0.8em;
 }
 
 .reviewSection {
@@ -155,83 +169,33 @@ body {
 .footerContainer {
   width: 100%;
   background-color: whitesmoke;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
   color: #0b0218;
   font-family: "Lato", sans-serif;
   padding: 2em;
 }
 
 .socialMediaContainer {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  border-right: 1px solid #0b0218;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  flex-direction: row;
+  justify-content: space-around;
   padding: 2em;
 }
 
 .socialIcon {
-  width: 4em;
-  margin-top: 1em;
-  margin-bottom: 1em;
+  width: 3em;
+  margin-left: 1em;
+  margin-right: 1em;
 }
 
 .retailerContainer {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  flex-direction: column;
+  justify-content: space-evenly;
   height: 100%;
-}
-
-.fnacLogo {
-  width: 6em;
-}
-
-.amazonSVG {
-  width: 6em;
-}
-
-.footerRight {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  height: 100%;
-  font-size: 1.5em;
-  font-weight: bold;
-}
-
-.footerRight a {
-  text-decoration: none;
-  color: #0b0218;
 }
 
 .copyrightBar {
@@ -245,95 +209,69 @@ body {
 .cover {
   width: calc(var(--baseline) * 60);
   height: calc(var(--baseline) * 42.6);
-  -webkit-box-shadow: 0 0 100px rgba(0, 0, 0, 0.3);
-          box-shadow: 0 0 100px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 100px rgba(0, 0, 0, 0.3);
 }
 
 .book {
   width: 100%;
   height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-perspective: 1200px;
-          perspective: 1200px;
+  perspective: 1200px;
 }
-
 .book__page {
   position: relative;
   width: 50%;
   height: 100%;
-  display: -ms-grid;
   display: grid;
-  -webkit-transform: rotateY(0deg);
-          transform: rotateY(0deg);
-  -webkit-transition: -webkit-transform 0.9s cubic-bezier(0.645, 0.045, 0.355, 1);
-  transition: -webkit-transform 0.9s cubic-bezier(0.645, 0.045, 0.355, 1);
+  transform: rotateY(0deg);
   transition: transform 0.9s cubic-bezier(0.645, 0.045, 0.355, 1);
-  transition: transform 0.9s cubic-bezier(0.645, 0.045, 0.355, 1), -webkit-transform 0.9s cubic-bezier(0.645, 0.045, 0.355, 1);
-  -webkit-transform-origin: 0% 0%;
-          transform-origin: 0% 0%;
+  transform-origin: 0% 0%;
   background-color: var(--page-bg);
-  background-image: -webkit-gradient(linear, left top, right top, from(#e3e3e3), color-stop(18%, rgba(247, 247, 247, 0)));
   background-image: linear-gradient(90deg, #e3e3e3 0%, rgba(247, 247, 247, 0) 18%);
 }
-
 .book__page:nth-of-type(1) {
-  background-image: -webkit-gradient(linear, right top, left top, from(#e3e3e3), color-stop(18%, rgba(247, 247, 247, 0)));
   background-image: linear-gradient(-90deg, #e3e3e3 0%, rgba(247, 247, 247, 0) 18%);
 }
-
 .book__page--1 {
   cursor: pointer;
   overflow: hidden;
 }
-
 .book__page--1 img {
   width: 100%;
   max-width: 100%;
   height: 100%;
 }
-
 .book__page--2 {
   position: absolute;
   right: 0;
   pointer-events: none;
-  -webkit-transform-style: preserve-3d;
-          transform-style: preserve-3d;
+  transform-style: preserve-3d;
   background-color: var(--page-bg);
-  background-image: -webkit-gradient(linear, left top, right top, from(#e3e3e3), color-stop(18%, rgba(247, 247, 247, 0)));
   background-image: linear-gradient(90deg, #e3e3e3 0%, rgba(247, 247, 247, 0) 18%);
 }
-
 .book__page--4 {
   cursor: pointer;
   padding: 0 calc(var(--baseline) * 3);
 }
-
 .book__page-front {
   position: absolute;
   width: 100%;
   height: 100%;
-  -webkit-transform: rotateY(0deg) translateZ(1px);
-          transform: rotateY(0deg) translateZ(1px);
+  transform: rotateY(0deg) translateZ(1px);
 }
-
 .book__page-back {
   position: absolute;
   width: 100%;
   height: 100%;
   padding: 0 calc(var(--baseline) * 1.8);
-  -webkit-transform: rotateY(180deg) translateZ(1px);
-          transform: rotateY(180deg) translateZ(1px);
+  transform: rotateY(180deg) translateZ(1px);
 }
-
 .book__page .page__content {
   padding: var(--baseline);
   height: 100%;
   position: relative;
   text-align: center;
 }
-
 .book__page .page__content-book-title {
   font-family: "Lato", sans-serif;
   font-size: calc(var(--base-size) * 2);
@@ -344,7 +282,6 @@ body {
   margin-top: calc(var(--baseline) * 5);
   margin-bottom: calc(var(--baseline) * 2);
 }
-
 .book__page .page__content-author {
   font-family: var(--title);
   font-size: calc(var(--base-size) * 1.2);
@@ -357,7 +294,6 @@ body {
   padding: calc(var(--baseline) / 2) calc(var(--baseline) / 5);
   margin-bottom: calc(var(--baseline) * 6);
 }
-
 .book__page .page__content-credits {
   font-family: var(--title);
   text-transform: uppercase;
@@ -365,13 +301,11 @@ body {
   margin-bottom: calc(var(--baseline) * 2);
   letter-spacing: 1px;
 }
-
 .book__page .page__content-credits span {
   display: block;
   font-size: calc(var(--base-size) * 1.2);
   letter-spacing: 0;
 }
-
 .book__page .page__content-copyright {
   position: absolute;
   width: calc(100% - (var(--baseline) * 2));
@@ -380,7 +314,6 @@ body {
   font-size: calc(var(--base-size) * 0.8);
   text-transform: uppercase;
 }
-
 .book__page .page__content-title {
   font-family: var(--title);
   font-size: calc(var(--base-size) * 1);
@@ -389,30 +322,25 @@ body {
   margin-top: calc(var(--baseline) * 5);
   margin-bottom: calc(var(--baseline) * 3);
 }
-
 .book__page .page__content-table {
   width: 100%;
   margin-top: calc(var(--baseline) * 2);
 }
-
 .book__page .page__content-table td {
   font-family: var(--title);
   font-size: calc(var(--base-size) * 1);
   padding-bottom: calc(var(--baseline) * 1.5);
   text-transform: uppercase;
 }
-
 .book__page .page__content-blockquote {
   margin-bottom: calc(var(--baseline) * 2);
 }
-
 .book__page .page__content-blockquote-text {
   font-family: var(--title);
   font-size: calc(var(--base-size) * 0.7);
   font-style: italic;
   text-align: justify;
 }
-
 .book__page .page__content-blockquote-reference {
   font-family: var(--title);
   font-size: calc(var(--base-size) * 0.7);
@@ -420,14 +348,12 @@ body {
   float: right;
   text-transform: uppercase;
 }
-
 .book__page .page__content-text {
   font-family: var(--title);
   font-size: calc(var(--base-size) * 0.7);
   text-align: justify;
   text-indent: var(--baseline);
 }
-
 .book__page .page__number {
   position: absolute;
   bottom: var(--baseline);
@@ -436,17 +362,12 @@ body {
   font-size: calc(var(--base-size) * 0.67);
   text-align: center;
 }
-
-.book input[type="radio"] {
+.book input[type=radio] {
   display: none;
 }
-
-.book input[type="radio"]:checked + .book__page {
-  -webkit-transition: -webkit-transform 0.9s cubic-bezier(0.645, 0.045, 0.355, 1);
-  transition: -webkit-transform 0.9s cubic-bezier(0.645, 0.045, 0.355, 1);
+.book input[type=radio]:checked + .book__page {
   transition: transform 0.9s cubic-bezier(0.645, 0.045, 0.355, 1);
-  transition: transform 0.9s cubic-bezier(0.645, 0.045, 0.355, 1), -webkit-transform 0.9s cubic-bezier(0.645, 0.045, 0.355, 1);
-  -webkit-transform: rotateY(-180deg);
-          transform: rotateY(-180deg);
+  transform: rotateY(-180deg);
 }
+
 /*# sourceMappingURL=style.css.map */
