--- a/style.scss
+++ b/style.scss
@@ -9,7 +9,7 @@
 
 :root {
   /* colors */
-  --body-bg: #ffffff;
+  --body-bg: whitesmoke;
   --page-bg: #f5f5f5;
   --dark-text: #2a2935;
 
@@ -49,7 +49,17 @@ body {
 }
 
 .amazonLogo {
-  width: 18em;
+  display: block;
+  width: 10em;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.amazonText {
+  text-align: center;
+  color: #3E8886;
+  font-family: "Lato", sans-serif;
+  font-size: 2em;
 }
 
 .amazonLink a {
@@ -57,13 +67,23 @@ body {
   color: black;
 }
 
-// Author Section
+// Youtube Video
+.youtubeVideo {
+  margin-top: 2em;
+  margin-bottom: 2em;
+}
+
+// Book 
 .authorContainer {
-  background: rgb(11, 2, 24);
-  color: white;
+  background: rgb(62,136,134);
+  background: linear-gradient(180deg, rgba(62,136,134,1) 0%, rgba(70,9,121,1) 70%, rgba(28,7,54,1) 100%);
+  color: whitesmoke;
   font-family: "Lato", sans-serif;
-  width: 100%;
+  width: 80%;
   padding: 2em;
+  text-align: center;
+  box-shadow: 1px 1px 40px rgb(170, 163, 163);
+  border-radius: 5px;
 }
 
 .authorTitle {
@@ -72,44 +92,62 @@ body {
   margin: 1.2em;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  color: rgb(11, 2, 24);
-  border-top: 3px solid rgb(11, 2, 24);
-  padding-top: 1em;
-}
-
-.arrow {
-  width: 5em;
-  transition: transform 0.2s ease-in-out;
-}
-
-.arrow:hover {
-  transform: scale(1.2);
-  cursor: pointer;
-}
-
-.authorPortrait {
-  display: block;
-  width: 20em;
-  border-radius: 50%;
-  height: auto;
-  margin-left: auto;
-  margin-right: auto;
-  box-shadow: 2px 2px 10px black;
+  color: #3E8886;
 }
 
 .authorSection {
   display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  font-family: "Inknut Antiqua", serif;
+  font-size: 1em;
+  padding-left: 4em;
+  padding-right: 4em;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  text-shadow: 1px 1px 1px rgb(66, 63, 63);
+}
+
+.authorSection p {
+  margin-top: 0.2em;
+  margin-bottom: 0.2em;
+}
+
+.bookContainer {
+  background: #15052b;
+  color: whitesmoke;
+  font-family: "Lato", sans-serif;
+  width: 100%;
+  padding: 2em;
+  text-align: left;
+  box-shadow: 1px 1px 40px rgb(170, 163, 163);
+  margin-top: 4em;
+}
+
+.bookSection {
+  display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  font-family: "Inknut Antiqua", serif;
+  font-size: 1em;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  text-shadow: 1px 1px 1px rgb(66, 63, 63);
 }
 
-.authorDescription {
-  width: 40em;
-  padding: 1.5em;
-  line-height: 2em;
-  font-size: 1em;
-  font-family: "Inknut Antiqua", serif;
+.bookDescription {
+  width: 50%;
+  margin-top: 5em;
+}
+
+.portrait {
+  width: 30em;
+  border-radius: 5px;
+  margin-top: 0.8em;
 }
 
 // Review Section
@@ -145,7 +183,7 @@ body {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   color: rgb(11, 2, 24);
   font-family: "Lato", sans-serif;
   padding: 2em;
@@ -153,16 +191,15 @@ body {
 
 .socialMediaContainer {
   display: flex;
-  flex-direction: column;
-  border-right: 1px solid rgb(11, 2, 24);
+  flex-direction: row;
   justify-content: space-around;
   padding: 2em;
 }
 
 .socialIcon {
-  width: 4em;
-  margin-top: 1em;
-  margin-bottom: 1em;
+  width: 3em;
+  margin-left: 1em;
+  margin-right: 1em;
 }
 
 .retailerContainer {
@@ -170,27 +207,6 @@ body {
   flex-direction: column;
   justify-content: space-evenly;
   height: 100%;
-}
-
-.fnacLogo {
-  width: 6em;
-}
-
-.amazonSVG {
-  width: 6em;
-}
-.footerRight {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  height: 100%;
-  font-size: 1.5em;
-  font-weight: bold;
-}
-
-.footerRight a {
-  text-decoration: none;
-  color: rgb(11, 2, 24);
 }
 
 .copyrightBar {
