--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Inknut+Antiqua:wght@300&display=swap");
 :root {
   /* colors */
-  --body-bg: whitesmoke;
+  --body-bg: white;
   --page-bg: #f5f5f5;
   --dark-text: #2a2935;
   /* spacing */
